Grid Info section mobile version bug fixed

--- a/client/src/assets/styles/footer.scss
+++ b/client/src/assets/styles/footer.scss
@@ -29,7 +29,7 @@
             align-items: center;
             grid-column: 1 / span 2;
             >i{
-                font-size: 5rem;
+                font-size: 4rem;
                 color: rgba(255,255,255, 0.8);
             }
             .fa-facebook-square:hover{
