--- a/client/src/assets/styles/info_section.scss
+++ b/client/src/assets/styles/info_section.scss
@@ -23,8 +23,11 @@
             justify-content: center;
             >img{
                 width: 100%;
+                max-height: 500px;
             }
         }
+
+        
     }
 }
 
@@ -47,10 +50,9 @@
     
             >.image-box{
                 margin: 0rem 1rem;
-                justify-content: center;
                 align-items: center;
                 >img{
-                    width: 100%;
+                    max-height: 2000px;
                 }
             }
         }
